alterando deletes para serem tipo query
